test/semantic_errors/invalid_binaryop4.mc
void main() {
    bool res;
    char a;
    int b;
    res = a < b; /* cannot compare char with int */
}